openshift/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: sunseyy/ticketing-backend:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: uploads-storage
              mountPath: /app/uploads
      volumes:
        - name: uploads-storage
          persistentVolumeClaim:
            claimName: uploads-pvc
