openshift/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend-route
spec:
  host: api-ticket-system.apps.green.tnd.linux
  to:
    kind: Service
    name: backend-service
  port:
    targetPort: 5000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
