openshift/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend-route
spec:
  host: frontend-ticket-system.apps.green.tnd.linux
  to:
    kind: Service
    name: frontend-service
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
